Apply suggestion from @InsertCreativityHere
Co-authored-by: Austin Henriksen <austin.r.henriksen79@gmail.com>